--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ mFjmHscB5PqTOXXj4I9MiseyrV5p3zBaPiKh6PyBXTTKuYjyYBg=
 
 
 
-<a href="kyclogin_0x0924521A_public.asc">Download my PGP key</a>
+<a href="kyclogin_0x0924521A_public.asc">Download Kyclogin's PGP key</a>
 
 </body>
 </html>
