--- a/escrow/index.html
+++ b/escrow/index.html
@@ -18,7 +18,7 @@
 <body>
 KycLogin acts as a silent third-party between two parties, ensuring the secure and seamless execution of high-value transactions.
 
-● How it works
+<b>How it works</b>
   - Funds are held in one of our cold wallets.
   - Once the agreed conditions are met, funds are released to the designated party.
   - If the deal isn't respected, the process is stopped and we judge the deal.
@@ -26,7 +26,7 @@ KycLogin acts as a silent third-party between two parties, ensuring the secure a
 We do not ask for names. No KYC.
 Conversations are encrypted and self-destruct after the deal is closed.
 
-● Engagement rules
+<b>Engagement rules</b>
 - You must clearly define the deal terms/conditions (we are not responsible if not).
 - The seller must deliver exactly what was described.
 - If the delivery matches the buyer's original description, funds are released.
@@ -35,7 +35,7 @@ Conversations are encrypted and self-destruct after the deal is closed.
 - We do not touch accounts or participate in delivery. Our role is strictly to hold and release funds.
 - We'll not cover crypto transaction network fees when sending and receiving the funds.
 
-● Fees structure (minimum $50,000)
+<b>Fees structure (minimum $50,000)</b>
 Whitehat transactions:
 - $50,000 to $1M: 1%
 - Over $1M: 0.5%
@@ -46,11 +46,11 @@ Blackhat transactions:
 
 Crypto network fees are always paid by the sender.
 
-● Secure channels
+<b>Secure channels</b>
 - For blackhat or sensitive transactions, we switch to Session or SimpleX.
 - If a transaction is falsely declared whitehat but is later identified as blackhat, we hold no responsibility.
 
-● Dispute handling
+<b>Dispute handling</b>
 If any party is found to be acting in bad faith, attempting a pullback or scam:
 - We reserve full discretion to decide where the funds go.
 - This may result in full release to one party, a 50/50 refund split or a permanent hold.
