--- a/escrow/index.html
+++ b/escrow/index.html
@@ -18,7 +18,8 @@
 <body>
 KycLogin acts as a silent third-party between two parties, ensuring the secure and seamless execution of high-value transactions.
 
-<b>How it works</b>
+
+HOW IT WORKS
   - Funds are held in one of our cold wallets.
   - Once the agreed conditions are met, funds are released to the designated party.
   - If the deal isn't respected, the process is stopped and we judge the deal.
@@ -26,7 +27,8 @@ KycLogin acts as a silent third-party between two parties, ensuring the secure a
 We do not ask for names. No KYC.
 Conversations are encrypted and self-destruct after the deal is closed.
 
-<b>Engagement rules</b>
+
+ENGAGEMENT RULES
 - You must clearly define the deal terms/conditions (we are not responsible if not).
 - The seller must deliver exactly what was described.
 - If the delivery matches the buyer's original description, funds are released.
@@ -35,10 +37,12 @@ Conversations are encrypted and self-destruct after the deal is closed.
 - We do not touch accounts or participate in delivery. Our role is strictly to hold and release funds.
 - We'll not cover crypto transaction network fees when sending and receiving the funds.
 
-<b>Fees structure (minimum $50,000)</b>
+
+FEES STRUCTURE (MINIMUM $50,000)
 Whitehat transactions:
 - $50,000 to $1M: 1%
 - Over $1M: 0.5%
+
 
 Blackhat transactions:
 - $50,000 to $1M: 3%
@@ -46,11 +50,13 @@ Blackhat transactions:
 
 Crypto network fees are always paid by the sender.
 
-<b>Secure channels</b>
+
+SECURE CHANNELS
 - For blackhat or sensitive transactions, we switch to Session or SimpleX.
 - If a transaction is falsely declared whitehat but is later identified as blackhat, we hold no responsibility.
 
-<b>Dispute handling</b>
+
+DISPUTE HANDLING
 If any party is found to be acting in bad faith, attempting a pullback or scam:
 - We reserve full discretion to decide where the funds go.
 - This may result in full release to one party, a 50/50 refund split or a permanent hold.
