--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Kyc Login</title>
+        <title>KycLogin</title>
         <style>
             body {
                 white-space: pre-wrap;
@@ -12,39 +12,81 @@
                 line-height: 1.4;
                 max-width: 100%;
                 overflow-x: hidden;
+                color: white;
+                background-color: black;
+            }
+            .ascii {
+                text-align: center;
+                overflow-x: auto;
+                white-space: pre;
+                font-size: 5px;
+            }
+            @media (max-width: 600px) {
+                .Sign {
+                    font-size: 12px;
+                    text-align: left;
+                }
+                .ascii {
+                    font-size: 8px;
+                }
+            }
+            @media (min-width: 601px){
+                .Sign {
+                    width: fit-content;
+                    text-align: left;
+                    margin: 0 auto;
+                    font-size: 13px;
+                }
+                .ascii {
+                    font-size: 12px;
+                }
             }
         </style>
     </head>
 <body>
+<div class="ascii">
+ /$$   /$$                     /$$                           /$$          
+| $$  /$$/                    | $$                          |__/          
+| $$ /$$/  /$$   /$$  /$$$$$$$| $$        /$$$$$$   /$$$$$$  /$$ /$$$$$$$ 
+| $$$$$/  | $$  | $$ /$$_____/| $$       /$$__  $$ /$$__  $$| $$| $$__  $$
+| $$  $$  | $$  | $$| $$      | $$      | $$  \ $$| $$  \ $$| $$| $$  \ $$
+| $$\  $$ | $$  | $$| $$      | $$      | $$  | $$| $$  | $$| $$| $$  | $$
+| $$ \  $$|  $$$$$$$|  $$$$$$$| $$$$$$$$|  $$$$$$/|  $$$$$$$| $$| $$  | $$
+|__/  \__/ \____  $$ \_______/|________/ \______/  \____  $$|__/|__/  |__/
+           /$$  | $$   // Private UHNWI Network    /$$  \ $$              
+          |  $$$$$$/                              |  $$$$$$/              
+           \______/                                \______/               
+</div>
+
+<div class="Sign">
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-Contacts :
+Telegram : kyclogin
+Twitter/X : kyclogin
 
-- - Telegram : Kyclogin
-- - Twitter/X : Kyclogin
-
-Expiration of the message : 10/06/25
+Expiration of the message : 06/20/25
 -----BEGIN PGP SIGNATURE-----
 
-iQIzBAEBCAAdFiEEGuXaXBXJ3h+JJ36W+Of4zwkkUhoFAmg52SkACgkQ+Of4zwkk
-UhoI8w//XQzjRB4O9+qAXb8nUoqGy3AddfRV3pwAJUpojC2USO/kWVfytD9WICF9
-we/2jWEQuUJswY1D7D9PSx3Qv0QTA1mXfTuGA+36KwFpKluZSjX8a+XlIww5gu6p
-M+SVEVz9VIjg0ctiqUns6ImjHg+ihSom79ronT7NIVmlSS59EQqVvH63DqLjPNRY
-PWP4OFFUPEPu3LvHrTLJ90kQE18pW6ztAH7zy9QfFyWi1fYx5zHYmOL2EfGosbUK
-B4zFB02FXs8Fcz5d0W4KaK1HGa/UkUD5VgNajT8nElWZx/d1/+ggRYpS4udfSAQb
-VfvDyJeCeuGmv3ivyrLZDz2EGsw/OgqBs9+9Kcns1lfoDQ765BXP/0CLDSEHGuNa
-asx30WSlt7ZX/km1SruKacKReSN2Y62d7ChqsmBa8hbfKNXcl9qCNCL9sW5cPbjY
-56hkR5D2TQH9cBUrU0fqyBiwtMBIFom81rnTnwA0sviSapHVlJBnyRvB9+4h0rWz
-tCe9GPet0H04rG59HLy+crl/qyzAvXXtZETFqHp35/jbPvC8oddtkG+Z93BY5Wvy
-Vhj8LyEK5hzrD3eAJQh//g1eiCMD07n4fSLFgPm6iX99Gak/hieu6HHp2OIOqsnS
-mFjmHscB5PqTOXXj4I9MiseyrV5p3zBaPiKh6PyBXTTKuYjyYBg=
-=JE4d
+iQIzBAEBCAAdFiEEGuXaXBXJ3h+JJ36W+Of4zwkkUhoFAmhMYAAACgkQ+Of4zwkk
+UhrMag/+JNypdnjd5Qa/AaGSUFJ7m5IgvqUoX75szMv5JhqaTbYte0mhG8+o5ny+
+4ZfXRj86oa3IiyaIe45rO3cpRwu9vTaXoqDzPIl01zRl1cH45DdqZNBCbtcm3QkO
+8BdQCF2g3M4OjnMpeyfGi8WQ5jQxdSBdRjmr0Obe8bzMQufT4he4s4vOjoqaX0Ot
+vDpf0GD5/L3vupaNZwcoHNmKi4d7vV3ppAWTmZB1GLYteoF+bNMe2IpcXppLy5Vy
+wbbBaHgGTbAJo9J26G5rS7liJHdyL3KUk1jizEnyYh2BBbjyy9am5Q1EtRTRQTb9
+SRN4Lc1HRh8kEyUB4wd1oxZWp4BHzrTMYY80zuTZ0spBrhYR1jYvOKGdpj6Zx5xi
+udqtOB+mxYUV0U95v5VGbqKizpFnjOtch8HwOuoxsU5ORVgY6FEzr79w5dnATzIB
+yaIuJM9G9Tb5CAvy02L0/MZuYtZ485BUn0QBqmxgLVpUqKbImiyykeo9Csbteri3
+wEMYa99oNUIvsscrNSE6wz1T5APQmZkbFrJ0gf07+lG3IiBurUqSBXN1lpuCQWuj
+8PMQs3uA2ZROKjz0hZ3TqrMATXj4Wu4X0QiJx/7O9eBWOBaWOoKjOnh4z8c1WMzG
+PBIFfNWVUfRF2Mqt+JT9BFsHMHEvKV0VPNvamKTuWEx+C9WYDGc=
+=HJRP
 -----END PGP SIGNATURE-----
+</div>
 
 
-
-<a href="kyclogin_0x0924521A_public.asc">Download Kyclogin's PGP key</a>
-
+<div style="text-align: center;">
+<a href="google.com" style="color: rgb(85, 170, 255); text-decoration: none;">Download KycLogin's PGP key</a>
+</div>
 </body>
 </html>
