--- a/escrow/index.html
+++ b/escrow/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Kyc Login</title>
+        <title>KycLogin</title>
         <style>
             body {
                 white-space: pre-wrap;
@@ -12,10 +12,55 @@
                 line-height: 1.4;
                 max-width: 100%;
                 overflow-x: hidden;
+                color: white;
+                background-color: black;
+            }
+            .ascii {
+                text-align: center;
+                overflow-x: auto;
+                white-space: pre;
+                font-size: 5px;
+            }
+            @media (max-width: 600px) {
+                .Message {
+                    font-size: 12px;
+                    text-align: left;
+                    width: fit-content;
+                    margin: 0 auto;
+                }
+                .ascii {
+                    font-size: 8px;
+                }
+            }
+            @media (min-width: 601px){
+                .Message {
+                    width: fit-content;
+                    text-align: left;
+                    margin: 0 auto;
+                    font-size: 13px;
+                }
+                .ascii {
+                    font-size: 12px;
+                }
             }
         </style>
     </head>
 <body>
+<div class="ascii">
+ /$$   /$$                     /$$                           /$$          
+| $$  /$$/                    | $$                          |__/          
+| $$ /$$/  /$$   /$$  /$$$$$$$| $$        /$$$$$$   /$$$$$$  /$$ /$$$$$$$ 
+| $$$$$/  | $$  | $$ /$$_____/| $$       /$$__  $$ /$$__  $$| $$| $$__  $$
+| $$  $$  | $$  | $$| $$      | $$      | $$  \ $$| $$  \ $$| $$| $$  \ $$
+| $$\  $$ | $$  | $$| $$      | $$      | $$  | $$| $$  | $$| $$| $$  | $$
+| $$ \  $$|  $$$$$$$|  $$$$$$$| $$$$$$$$|  $$$$$$/|  $$$$$$$| $$| $$  | $$
+|__/  \__/ \____  $$ \_______/|________/ \______/  \____  $$|__/|__/  |__/
+           /$$  | $$   // Private UHNWI Network    /$$  \ $$              
+          |  $$$$$$/                              |  $$$$$$/              
+           \______/                                \______/               
+</div>
+
+<div class="Message">
 KycLogin acts as a silent third-party between two parties, ensuring the secure and seamless execution of high-value transactions.
 
 
@@ -64,5 +109,8 @@ If any party is found to be acting in bad faith, attempting a pullback or scam:
 
 
   Kyclogin.
+</div>
+</body>
+</html>
 </body>
 </html>
